# polkit-kde-agent-1

./: .git-blame-ignore-revs  .gitignore  .kde-ci.yml  AuthDialog.cpp  AuthDialog.h  AuthDialog.ui  CMakeLists.txt  IdentitiesModel.cpp  IdentitiesModel.h  Messages.sh  QuickAuthDialog.cpp  QuickAuthDialog.h  QuickAuthDialog.qml  QuickAuthDialog.qrc  authdetails.ui  authdialog.cpp  authdialog.h  authdialog.ui  authdialogui.ui  config.h.cmake  main.cpp  org.kde.Polkit1AuthAgent.xml  plasma-polkit-agent.service.in  policykit1-kde.notifyrc  policykitkde.cpp  policykitkde.h  policykitlistener.cpp  policykitlistener.h  polkit-kde-authentication-agent-1.desktop  polkit-kde-authentication-agent-1.desktop.cmake  polkit-kde-authentication-agent-1.desktop.in  polkit-kde-authentication-agent-1.notifyrc  processwatcher.cpp  processwatcher.h
cmake/modules/: FindPolkitQt-1.cmake
po/ar/: polkit-kde-authentication-agent-1.po
po/ast/: polkit-kde-authentication-agent-1.po
po/be/: polkit-kde-authentication-agent-1.po
po/bg/: polkit-kde-authentication-agent-1.po
po/bs/: polkit-kde-authentication-agent-1.po
po/ca/: polkit-kde-authentication-agent-1.po
po/ca@valencia/: polkit-kde-authentication-agent-1.po
po/cs/: polkit-kde-authentication-agent-1.po
po/da/: polkit-kde-authentication-agent-1.po
po/de/: polkit-kde-authentication-agent-1.po
po/el/: polkit-kde-authentication-agent-1.po
po/en_GB/: polkit-kde-authentication-agent-1.po
po/eo/: polkit-kde-authentication-agent-1.po
po/es/: polkit-kde-authentication-agent-1.po
po/et/: polkit-kde-authentication-agent-1.po
po/eu/: polkit-kde-authentication-agent-1.po
po/fi/: polkit-kde-authentication-agent-1.po
po/fr/: polkit-kde-authentication-agent-1.po
po/ga/: polkit-kde-authentication-agent-1.po
po/gl/: polkit-kde-authentication-agent-1.po
po/he/: polkit-kde-authentication-agent-1.po
po/hi/: polkit-kde-authentication-agent-1.po
po/hr/: polkit-kde-authentication-agent-1.po
po/hsb/: polkit-kde-authentication-agent-1.po
po/hu/: polkit-kde-authentication-agent-1.po
po/ia/: polkit-kde-authentication-agent-1.po
po/id/: polkit-kde-authentication-agent-1.po
po/ie/: polkit-kde-authentication-agent-1.po
po/is/: polkit-kde-authentication-agent-1.po
po/it/: polkit-kde-authentication-agent-1.po
po/ja/: polkit-kde-authentication-agent-1.po
po/ka/: polkit-kde-authentication-agent-1.po
po/kk/: polkit-kde-authentication-agent-1.po
po/km/: polkit-kde-authentication-agent-1.po
po/ko/: polkit-kde-authentication-agent-1.po
po/lt/: polkit-kde-authentication-agent-1.po
po/lv/: polkit-kde-authentication-agent-1.po
po/mai/: polkit-kde-authentication-agent-1.po
po/ml/: polkit-kde-authentication-agent-1.po
po/mr/: polkit-kde-authentication-agent-1.po
po/ms/: polkit-kde-authentication-agent-1.po
po/nb/: polkit-kde-authentication-agent-1.po
po/nds/: polkit-kde-authentication-agent-1.po
po/nl/: polkit-kde-authentication-agent-1.po
po/nn/: polkit-kde-authentication-agent-1.po
po/pa/: polkit-kde-authentication-agent-1.po
po/pl/: polkit-kde-authentication-agent-1.po
po/pt/: polkit-kde-authentication-agent-1.po
po/pt_BR/: polkit-kde-authentication-agent-1.po
po/ro/: polkit-kde-authentication-agent-1.po
po/ru/: polkit-kde-authentication-agent-1.po
po/sa/: polkit-kde-authentication-agent-1.po
po/sk/: polkit-kde-authentication-agent-1.po
po/sl/: polkit-kde-authentication-agent-1.po
po/sr/: polkit-kde-authentication-agent-1.po
po/sr@ijekavian/: polkit-kde-authentication-agent-1.po
po/sr@ijekavianlatin/: polkit-kde-authentication-agent-1.po
po/sr@latin/: polkit-kde-authentication-agent-1.po
po/sv/: polkit-kde-authentication-agent-1.po
po/tg/: polkit-kde-authentication-agent-1.po
po/th/: polkit-kde-authentication-agent-1.po
po/tr/: polkit-kde-authentication-agent-1.po
po/ug/: polkit-kde-authentication-agent-1.po
po/uk/: polkit-kde-authentication-agent-1.po
po/vi/: polkit-kde-authentication-agent-1.po
po/zh_CN/: polkit-kde-authentication-agent-1.po
po/zh_TW/: polkit-kde-authentication-agent-1.po
qml/: MobileDialogWindow.qml  MobileQuickAuthDialog.qml  QuickAuthDialog.qml  RejectPasswordPathAnimation.qml
src/: CMakeLists.txt  Messages.sh  context.cpp  context.h  context_p.h  identitymodel.cpp  identitymodel.h  listener.cpp  listener.h  listener_p.h  main.cpp
src/data/: AvatarRow.qml  Details.qml  Dialog.qml  Expandable.qml  MobileDialog.qml  PasswordRow.qml  data.qrc
